[package]
name = "fmp"
version = "0.2.1"
edition = "2021"
rust-version = "1.61"
authors = [
    "Fabien CÔTÉ <fabien.cote@me.com>",
]
license = "MIT"
readme = "README.md"
description = "Financial Modeling Prep API Wrapper"
homepage = "https://github.com/fcote/fmp-rs"
repository = "https://github.com/fcote/fmp-rs"
keywords = ["fmp", "financial", "modeling", "prep"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }